2020-07-09 Wiley E. Hill <wileyhill@gmail.com>

    * src/widgets/geda_separator.c: Eliminate ancillary GtkWidget in
      geda_separator_instance_init. Add function documentation for:

          * geda_separator_class_init
          * geda_separator_instance_init

2020-07-08 Wiley E. Hill <wileyhill@gmail.com>

    * src/widgets/geda_combobox.c: Replace GTK_LIST_STORE dynamic cast
      with static cast.

    * src/widgets/geda_separator.c: Replace GTK_WIDGET dynamic cast with
      static cast. Add todo documentation templates. Utilize macros:

          * geda_get_widget_requisition
          * geda_get_widget_style

2020-07-07 Wiley E. Hill <wileyhill@gmail.com>

    * src/functions/geda_container.c: Validate pointer is a GtkContainer
      in geda_container_focus_sort.

    * src/widgets/geda_menu_item.c: Reorganize module; move _get_property
      before _set_property.

2020-07-06 Wiley E. Hill <wileyhill@gmail.com>

    * src/widgets/geda_menu_item.c: Add internal source documentation:

          * geda_menu_item_forall
          * geda_menu_item_get_property
          * geda_menu_item_set_property

2020-07-03 Wiley E. Hill <wileyhill@gmail.com>

    * src/widgets/geda_radio_menu_item.c: Update Free Software Foundation
      address.

2020-06-19 Wiley E. Hill <wileyhill@gmail.com>

    * src/widgets/geda_menu_bar.c: Rename viewable_menu_bars ->
      viewable_bars.

    * src/widgets/geda_separator.c: Utilize macro:

          * geda_get_widget_allocation

2020-06-17 Wiley E. Hill <wileyhill@gmail.com>

    * include/geda_gtk_compat.h: Replace dynamic cast with static cast
      to GtkWidget pointer for Gtk>2:

          * geda_widget_get_allocation
          * geda_widget_in_destruction
          * geda_get_widget_parent
          * geda_get_widget_requisition
          * geda_get_widget_requisition

    * src/widgets/geda_option_menu.c: Utilize macro:

          * geda_get_widget_parent

    * src/widgets/geda_separator.c: Include geda_gtk_compat.h header.