@@ -1,3 +1,9 @@
+2020-07-14 Wiley E. Hill <wileyhill@gmail.com>
+
+    * src/widgets/geda_tearoff_menu_item.c: Utilize macro:
+
+          * geda_get_widget_style
+
 2020-07-09 Wiley E. Hill <wileyhill@gmail.com>
 
     * src/widgets/geda_separator.c: Eliminate ancillary GtkWidget in
